--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,6 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="this is my first apps"
+        android:text="this is my first apps!"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
 </RelativeLayout>
